--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Lato", Arial, Helvetica, sans-serif;
 }
 
 :root {
@@ -16,6 +19,12 @@
   width: 100%;
   height: 350px;
   padding: 0.5rem;
+  color: var(--color-secundario);
+}
+
+.footer a {
+  color: var(--color-secundario);
+  text-decoration: none;
 }
 
 .footer_wrapper {
@@ -24,5 +33,9 @@
   height: 100%;
   border-radius: 15px;
   display: grid;
-  grid-template-columns: 4;
+  grid-template-columns: 1;
+}
+
+.footer_logo {
+  width: 100%;
 }
