--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   font-family: "Lato", Arial, Helvetica, sans-serif;
 }
-
 :root {
   --color-fondo: #f5f1ea;
   --color-principal: #cda881;
@@ -17,25 +16,53 @@
 
 .footer {
   width: 100%;
-  height: 350px;
   padding: 0.5rem;
   color: var(--color-secundario);
 }
-
 .footer a {
   color: var(--color-secundario);
   text-decoration: none;
 }
-
 .footer_wrapper {
   background-color: var(--color-principal);
   width: 100%;
   height: 100%;
   border-radius: 15px;
   display: grid;
-  grid-template-columns: 1;
+  gap: 1rem;
 }
-
+.footer_column {
+  padding: 0.3rem 1rem;
+}
+.footer_column:first-child {
+  max-height: 100px;
+}
+.footer_column:first-child p {
+  display: none;
+}
 .footer_logo {
   width: 100%;
+  object-fit: contain;
+}
+.footer_socials i {
+  font-size: 2.3rem;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    height: 200px;
+  }
+  .footer_wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+  }
+  .footer_column:first-child {
+    width: 200px;
+  }
+  .footer_column:first-child p {
+    display: block;
+  }
+  .footer_column:last-child {
+    display: none;
+  }
 }
