--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -55,6 +55,9 @@ li {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+  font-weight: 700;
+    font-size: 16px;
+    color: var(--color-secundario);
 }
 
 .header_interestLinks a {
@@ -124,22 +127,26 @@ li {
 
   .header_ul {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 4rem;
   }
 
   .header_li {
-    width: 100%;
-    height: 100%;
+    width: auto;
   }
 
   .header_li a img {
-    width: 100%;
+    width: 25rem;
+    height: 5rem;
   }
 
   .header_li:first-child {
+    display: flex;
+  }
+
+  .header_li:last-child {
     display: none;
   }
 
@@ -151,11 +158,18 @@ li {
 
   .header_interestLinks a {
     text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
     color: var(--color-secundario);
   }
 
   .header_information {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--color-secundario);
   }
 
   .footer {
