main paged finished (css html)

--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
+:root {
+  --color-fondo-componentes: #f5f1ea;
+  --color-fondo: #fafafa;
+  --color-principal: #cda881;
+  --color-secundario: #4f4a45;
+  --color-texto-black: #00000000;
+  --color-texto-white: #fefefe;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,15 +17,11 @@
 }
 
 main {
-  padding: 0 2rem;
+  padding: 2rem;
 }
 
-:root {
-  --color-fondo: #f5f1ea;
-  --color-principal: #cda881;
-  --color-secundario: #4f4a45;
-  --color-texto-black: #00000000;
-  --color-texto-white: #fefefe;
+body {
+  background-color: var(--color-fondo);
 }
 
 .footer {
