--- a/web/src/styles/main/mainPage.css
+++ b/web/src/styles/main/mainPage.css
@@ -8,3 +8,74 @@
   height: 100%;
   border-radius: 15px;
 }
+.mainPage .mainPage_categorySelector {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 1rem;
+}
+.mainPage .mainPage_categorySelector button {
+  width: 100%;
+  height: 60px;
+  border-radius: 50px;
+  background-color: var(--color-fondo-componentes);
+  border: none;
+  font-size: 16px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+.mainPage .mainPage_categorySelector button:hover {
+  background-color: var(--color-principal);
+}
+.mainPage .mainPage_categorySelector button:hover p {
+  color: white;
+}
+.mainPage .mainPage_categorySelector button p {
+  font-weight: 400;
+  color: var(--color-secundario);
+  transition: all 0.2s;
+}
+.mainPage .mainPage_functionsList {
+  display: grid;
+  width: 100%;
+  justify-items: center;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  gap: 1rem;
+}
+.mainPage .mainPage_functionsList .function {
+  width: 250px;
+}
+.mainPage .mainPage_functionsList .function img {
+  width: 100%;
+  height: 309px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+@media (min-width: 768px) {
+  .mainPage .mainPage_mainImage {
+    height: 800px;
+  }
+  .mainPage .mainPage_categorySelector {
+    flex-direction: row;
+    height: 60px;
+    border-radius: 50px;
+    background-color: var(--color-fondo-componentes);
+  }
+  .mainPage .mainPage_functionsList {
+    padding: 0 4rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .mainPage .mainPage_functionsList .function {
+    width: 336px;
+  }
+}
