--- a/web/src/styles/mainPage.scss
+++ b/web/src/styles/mainPage.scss
@@ -10,4 +10,88 @@
       border-radius: 15px;
     }
   }
+
+  .mainPage_categorySelector {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 1rem;
+
+    button {
+      width: 100%;
+      height: 60px;
+      border-radius: 50px;
+      background-color: var(--color-fondo-componentes);
+      border: none;
+      font-size: 16px;
+      transition: all 0.2s;
+      cursor: pointer;
+
+      &:hover {
+        background-color: var(--color-principal);
+
+        p {
+          color: white;
+        }
+      }
+
+      p {
+        font-weight: 400;
+        color: var(--color-secundario);
+        transition: all 0.2s;
+      }
+    }
+  }
+
+  .mainPage_functionsList {
+    display: grid;
+    width: 100%;
+    justify-items: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    gap: 1rem;
+
+    .function {
+      width: 250px;
+
+      img {
+        width: 100%;
+        height: 309px;
+        object-fit: cover;
+        border-radius: 15px;
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .mainPage {
+    .mainPage_mainImage {
+      height: 800px;
+    }
+
+    .mainPage_categorySelector {
+      flex-direction: row;
+      height: 60px;
+      border-radius: 50px;
+      background-color: var(--color-fondo-componentes);
+    }
+
+    .mainPage_functionsList {
+      padding: 0 4rem;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+
+      .function {
+        width: 336px;
+      }
+    }
+  }
 }
