Fixes del header responsive

--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -44,7 +44,7 @@ li {
 }
 
 .header_li a img {
-  width: 100%;
+  width: 300px;
 }
 
 .header_li:first-child {
@@ -138,8 +138,7 @@ li {
   }
 
   .header_li a img {
-    width: 25rem;
-    height: 5rem;
+    width: 100%;
   }
 
   .header_li:first-child {
