--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -66,8 +66,8 @@ li {
   justify-content: space-between;
   gap: 1rem;
   font-weight: 700;
-    font-size: 16px;
-    color: var(--color-secundario);
+  font-size: 16px;
+  color: var(--color-secundario);
 }
 
 .header_interestLinks a {
@@ -97,6 +97,7 @@ li {
   border-radius: 15px;
   display: grid;
   gap: 1rem;
+  padding: 1rem 0;
 }
 
 .footer_column {
