--- a/web/src/styles/aboutUs.scss
+++ b/web/src/styles/aboutUs.scss
@@ -50,6 +50,7 @@
       font-weight: 700;
       width: 100%;
       text-align: start;
+      margin-bottom: 2rem;
     }
 
     p {
@@ -64,6 +65,8 @@
 
     div{
       display: flex;
+      align-items: center;
+      gap: 2rem;
     }
 
     div div{
