--- a/web/src/styles/main/purchasePage.css
+++ b/web/src/styles/main/purchasePage.css
@@ -89,3 +89,17 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.purchase_buttons .purchase_buttons_back {
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 8rem;
+  background-color: var(--color-secundario);
+  border: none;
+}
+.purchase_buttons .purchase_buttons_purchase {
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 10rem;
+  background-color: var(--color-principal);
+  order: none;
+}
