--- a/web/src/styles/main/purchasePage.css
+++ b/web/src/styles/main/purchasePage.css
@@ -25,6 +25,24 @@
 .data_formulary .data_formulary_inputs div input {
   width: 45%;
 }
+.data_formulary .data_formulary_inputs input[type=text] {
+  appearance: none;
+  border: none;
+  outline: none;
+  border-bottom: 0.2em solid rgb(61, 61, 61);
+  background: transparent;
+  border-radius: 0.2em 0.2em 0 0;
+  padding: 0.4em;
+}
+.data_formulary .data_formulary_inputs input[type=email] {
+  appearance: none;
+  border: none;
+  outline: none;
+  border-bottom: 0.2em solid rgb(61, 61, 61);
+  background: transparent;
+  border-radius: 0.2em 0.2em 0 0;
+  padding: 0.4em;
+}
 
 .data_information {
   width: 90vw;
@@ -93,6 +111,7 @@
   border-radius: 10px;
   padding: 0.5rem;
   width: 8rem;
+  color: var(--color-texto-white);
   background-color: var(--color-secundario);
   border: none;
 }
@@ -101,5 +120,7 @@
   padding: 0.5rem;
   width: 10rem;
   background-color: var(--color-principal);
+  font-weight: 900;
+  color: var(--color-texto-white);
   order: none;
 }
