--- a/web/src/styles/seats.scss
+++ b/web/src/styles/seats.scss
@@ -10,8 +10,8 @@
   .seats_goBack {
     position: absolute;
     top: 0;
-    left: 100px;
-    margin-left: 1rem;
+    left: 0;
+    margin-left: 2rem;
     color: black;
     font-weight: 700;
   }
@@ -166,8 +166,12 @@
   .seats {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+
+    .seats_goBack {
+      margin-left: 5rem;
+    }
   }
 
   .seats_all_seats {
