--- a/web/src/styles/main/seats.css
+++ b/web/src/styles/main/seats.css
@@ -100,10 +100,10 @@
 }
 .seats .selected_seats .selected_seats_list {
   width: 100%;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   margin-top: 1rem;
   gap: 10px;
 }
