--- a/web/src/styles/seats.scss
+++ b/web/src/styles/seats.scss
@@ -112,10 +112,10 @@
 
     .selected_seats_list {
       width: 100%;
+      min-height: 200px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
       margin-top: 1rem;
       gap: 10px;
 
