cambiados alguno estilos, js de la pagina principal terminado

--- a/web/src/styles/generales.css
+++ b/web/src/styles/generales.css
@@ -16,6 +16,11 @@
   font-family: "Lato", Arial, Helvetica, sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: var(--color-secundario);
+}
+
 main {
   padding: 2rem;
 }
